--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		  </div>
         </div>
         <div id="content-secondary"></div>
-        <div id"footer"></div>
+        <div id="footer"></div>
     </div>
   </body>
 </html>
